fix(navbar): weird white space below search option

--- a/src/ui/Search/Search.module.css
+++ b/src/ui/Search/Search.module.css
@@ -17,7 +17,7 @@
   background-color: var(--color-background);
   box-shadow: 0px 15px 20px 0px rgb(0 0 0 / 75%);
   max-height: 500px;
-  overflow: scroll;
+  overflow: auto;
   position: absolute;
   right: 0;
   width: 100%;
